force-app/main/default/objects/Small_Claims_Court__c/Small_Claims_Court__c.object-meta.xml
<CustomObject>
    <label>Small Claims Court</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Small Claims Court Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Small Claims Court</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>