force-app/main/default/objects/Small_Claims_Court__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Area</label>
    <length>80</length>
    <type>Text</type>
</CustomField>