force-app/main/default/objects/Small_Claims_Court__c/fields/Small_Claims_Court_Address__c.field-meta.xml
<CustomField>
    <fullName>Small_Claims_Court_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Small Claims Court	Address</label>
    <type>TextArea</type>
</CustomField>