force-app/main/default/objects/Small_Claims_Court__c/fields/Small_Claims_Court_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Small_Claims_Court_Phone_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Small Claims Court Phone Number</label>
    <type>Phone</type>
</CustomField>